# dev-summit-shift-left-on-steroids

./: .gitignore  README.md
dev-summit/: .gitignore  Dockerfile  build.gradle.kts  pyproject.toml  requirements.txt  settings.gradle.kts
dev-summit/src/: app.py  config.py  generate_static.py  requirements.txt  template.html  test_app.py  test_generate_static.py  test_pdf_cache.py  test_qr_code.py  utils.py
dev-summit/src/main/kotlin/de/materna/devsummit/: DevSummitApplication.kt  Htmx.kt  IndexController.kt  (+1 more)
dev-summit/src/main/resources/: application.properties
dev-summit/src/main/resources/static/markdown/: 0_hallo_welt.md
dev-summit/src/slides/: 01_startfolie.md  02_speaker.md  02_warmup.md  03_warmup.md  03_warmup2.md  04_bug-free-by-design.md  05_teilbereiche-bug-free.md  06_ausgangslage.md  06_teilbereiche-bug-free.md  07_ausgangslage2.md  08_ausgangslage2.md  08_ausgangslage3.md  09_ausgangslage4.md  10_ausgangslage4.md  10_self-healing-commits.md  11_self-healing-commits-herausforderungen.md  11_self-healing-commits.md  12_obsolet.md  12_self-healing-commits-herausforderungen.md  13_agent-mode.md  13_obsolet.md  14_agent-mode.md  14_quality.md  15_daten.md  15_mcp_a2a.md  16_mcp_a2a copy.md  17_demo.md  17_leuchtturm.md  17_mcp.md  18_ende.md  18_mcp_copilot.md  18_speaker.md  19_leuchtturm.md  19_selfhealing_commits_mitigation.md  20_challanges.md  20_speaker.md  22_speaker.md
dev-summit/static_html/: slide10.html  slide12.html  slide13.html  slide15.html  slide16.html  slide17.html  slide3.html  slide4.html  slide5.html  slide6.html  slide8.html
(+38 files in other folders)
