[project]
name = "dev-summit-shift-left-on-steroids"
version = "0.1.0"
description = "Dev Summit presentation generator"
authors = [
    { name = "GitHub Mat", email = "github-mat@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "markdown", 
    "weasyprint",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "isort", 
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
disable = ["C0116", "C0114"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.master]
ignore-patterns = ["test_.*\\.py$"]

[tool.pylint.basic]
good-names = [
  "i",
  "j",
  "k",
  "ex",
  "Run",
  "_",
  "f",
  "md",
  "tpl",
  "dst",
  "src",
  "idx",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
